added grid display and center align and justify to body element

--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -3,3 +3,10 @@ body{
   margin: auto;
   align-content: center;
 }
+
+div {
+  display: grid;
+  justify-items: center;
+  align-items: center;
+}
+
