--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -16,3 +16,59 @@ main {
   grid-template-rows: 75px 150px 125px 125px 250px 250px 80px;
 }
 
+#a {
+  grid-column: 1/3;
+  grid-row: 1/2;
+  background-color: cadetblue
+  
+}
+
+#b {
+  grid-column: 1/3;
+  grid-row: 2/3;
+  background-color: cyan
+}
+
+#c {
+  grid-column: 1/3;
+  grid-row: 3/4;
+  background-color: bisque
+}
+
+#d {
+  grid-column: 1/3;
+  grid-row: 4/5;
+  background-color: aquamarine
+}
+
+#e {
+  grid-column: 1;
+  grid-row: 5/6;
+  background-color: grey
+}
+
+#f {
+  grid-column: 2;
+  grid-row: 5/6;
+  background-color: yellowgreen
+
+}
+
+#g {
+  grid-column: 1/2;
+  grid-row: 6/7;
+  background-color: gold
+}
+
+#h {
+  grid-column: 2;
+  grid-row: 6/7;
+  background-color: lemonchiffon
+}
+
+#i {
+  grid-column: 1/3;
+  grid-row: 7/8;
+  background-color: lightskyblue
+}
+
