--- a/CSS/modules.css
+++ b/CSS/modules.css
@@ -15,6 +15,35 @@
   #d{
     background-color: lightgray;
   }
+
+  #e{
+    background-color: lightblue
+  }
+
+  #f{
+    background-color: skyblue;
+  }
+
+  #g{
+    background-color: blueviolet;
+  }
+
+  #h{
+    background-color: darkblue;
+  }
+
+  #i{
+    background-color: darkslateblue;
+  }
+
+  #j{
+    background-color: midnightblue;
+  }
+  
+  
+  
+  
+  
   
   
 }
