--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -1,3 +1,5 @@
+ /*@media only screen and (min-width:480px) and (max-width: 600px) { */
+/* mobile view */
 body{
   /* width: 480px; */
   margin: auto;
@@ -19,59 +21,59 @@ main {
 #a {
   grid-column: 1/3;
   grid-row: 1/2;
-  background-color: cadetblue
-  
+  background-image: linear-gradient(darkslateblue, midnightblue);
 }
 
 #b {
   grid-column: 1/3;
   grid-row: 2/3;
-  background-color: cyan
+  background-image: linear-gradient(midnightblue,darkblue);
 }
 
 #c {
   grid-column: 1/3;
   grid-row: 3/4;
-  background-color: bisque
+  background-image: linear-gradient(darkblue, blueviolet);
 }
 
 #d {
   grid-column: 1/3;
   grid-row: 4/5;
-  background-color: aquamarine
+  background-image: linear-gradient(to left, blueviolet, violet);
 }
 
 #e {
   grid-column: 1;
   grid-row: 5/6;
-  background-color: grey
+  background-image: linear-gradient( violet, skyblue );
 }
 
 #f {
   grid-column: 2;
   grid-row: 5/6;
-  background-color: yellowgreen
+  background-image: linear-gradient( violet, slateblue );
 
 }
 
 #g {
   grid-column: 1/2;
   grid-row: 6/7;
-  background-color: gold
+  background-image: linear-gradient( skyblue, aqua );
 }
 
 #h {
   grid-column: 2;
   grid-row: 6/7;
-  background-color: lemonchiffon
+  background-image: linear-gradient( slateblue, rgb(95, 165, 165) );
+
 }
 
 #i {
   grid-column: 1/3;
   grid-row: 7/8;
-  background-color: lightskyblue
+  background-image: linear-gradient(to right, aqua , rgb(95, 165, 165));
 }
-
+/* laptop view */
 @media only screen and (min-width:768px){
   body {
     width: 960px;
@@ -92,7 +94,8 @@ main {
     height:auto;
     width: auto;
     background-image: linear-gradient(to right, orange,yellow,green,blue,indigo,violet);
-}
+  ;
+
   }
   
   #b {
@@ -100,7 +103,7 @@ main {
     grid-row: 2/6;
     height:auto;
     width:auto;
-    background-image: linear-gradient(to right, red ,orange, yellow);
+    background-image: linear-gradient(to right,orange, yellow);
   }
   
   #c {
