--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -39,26 +39,26 @@ main {
 #d {
   grid-column: 1/3;
   grid-row: 4/5;
-  background-image: linear-gradient(to left, blueviolet, violet);
+  background-image: linear-gradient(blueviolet, violet);
 }
 
 #e {
   grid-column: 1;
   grid-row: 5/6;
-  background-image: linear-gradient( violet, skyblue );
+  background-image: linear-gradient(violet, skyblue );
 }
 
 #f {
   grid-column: 2;
   grid-row: 5/6;
-  background-image: linear-gradient( violet, slateblue );
+  background-image: linear-gradient(violet, slateblue );
 
 }
 
 #g {
   grid-column: 1/2;
   grid-row: 6/7;
-  background-image: linear-gradient( skyblue, aqua );
+  background-image: linear-gradient(skyblue, aqua );
 }
 
 #h {
