--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -73,6 +73,52 @@ main {
   grid-row: 7/8;
   background-image: linear-gradient(to right, aqua , rgb(95, 165, 165));
 }
+
+/* tablet size */
+@media only screen and (min-width:600px) and (max-width: 767px){
+  #a{
+
+    background-color: darklategray;
+  }
+
+  #b{
+    background-color: darkgray;
+  }
+
+  #c{
+    background-color: gray;
+  }
+  
+  #d{
+    background-color: lightgray;
+  }
+
+  #e{
+    background-color: lightblue
+  }
+
+  #f{
+    background-color: skyblue;
+  }
+
+  #g{
+    background-color: blueviolet;
+  }
+
+  #h{
+    background-color: darkblue;
+  }
+
+  #i{
+    background-color: darkslateblue;
+  }
+
+  #j{
+    background-color: midnightblue;
+  }
+  
+}
+
 /* laptop view */
 @media only screen and (min-width:768px){
   body {
